--- a/public/style.css
+++ b/public/style.css
@@ -502,6 +502,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -581,14 +585,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 3.5rem;
 }
 
-.ml-auto {
-  margin-left: auto;
-}
-
-.-mt-32 {
-  margin-top: -8rem;
-}
-
 .mt-40 {
   margin-top: 10rem;
 }
@@ -611,6 +607,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-32 {
   margin-top: 8rem;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .mb-6 {
@@ -905,10 +905,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1.25rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -959,17 +955,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.5rem;
 }
 
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
-}
-
 .pt-16 {
   padding-top: 4rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
 }
 
 .pb-20 {
@@ -978,6 +965,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
 }
 
 .pt-8 {
@@ -990,10 +981,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-2 {
   padding-bottom: 0.5rem;
-}
-
-.pt-36 {
-  padding-top: 9rem;
 }
 
 .text-center {
@@ -1022,11 +1009,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .text-3xl {
@@ -1120,11 +1102,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
 .text-blue-400 {
   --tw-text-opacity: 1;
   color: rgb(96 165 250 / var(--tw-text-opacity));
@@ -1138,11 +1115,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-purple-500 {
   --tw-text-opacity: 1;
   color: rgb(168 85 247 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-red-600 {
@@ -1235,17 +1207,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 640px) {
-  .sm\:-mt-40 {
-    margin-top: -10rem;
-  }
-}
-
 @media (min-width: 768px) {
-  .md\:block {
-    display: block;
-  }
-
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1260,10 +1222,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:w-6\/12 {
     width: 50%;
-  }
-
-  .md\:w-4 {
-    width: 1rem;
   }
 
   .md\:justify-between {
@@ -1296,6 +1254,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: -16rem;
   }
 
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1318,14 +1280,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:w-3\/12 {
     width: 25%;
-  }
-
-  .lg\:w-6 {
-    width: 1.5rem;
-  }
-
-  .lg\:w-4 {
-    width: 1rem;
   }
 
   .lg\:w-4\/12 {
